--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ defaultContentLanguageInSubdir = false
 [params]
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `coffee`, or `dark`.
-  color_theme = "coffee"
+  color_theme = "dark"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
@@ -44,7 +44,7 @@ defaultContentLanguageInSubdir = false
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Indian Statistical Institute, North-East Centre", url = "www.isine.ac.in" } ]
+  organizations = [ { name = "Indian Statistical Institute, North-East Centre", url = "http://www.isine.ac.in/" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "Holendro_foto.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
